# rust-cdumay_error

./: .gitignore  Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: rust.yml
src/: builder.rs  common.rs  error.rs  errors.rs  generic.rs  http.rs  info.rs  json.rs  jsonify.rs  kind.rs  lib.rs  registry.rs  repr.rs  types.rs
src/types/: generic.rs  http.rs  mod.rs
