[package]
name = "cdumay_error"
version = "0.2.0"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
license = "BSD-3"
readme = "README.md"
documentation = "https://docs.rs/cdumay_error"
repository = "https://github.com/cdumay/rust-cdumay_error"
homepage =  "https://github.com/cdumay/rust-cdumay_error"
description = "A library to serialize and deserialize error using serde"
keywords = ["Error", "serde"]
categories = ["caching", "data-structures", "encoding"]

[badges]
gitlab = { repository = "cdumay/rust-cdumay_error" }
travis-ci = { repository = "cdumay/rust-cdumay_error" }
maintenance = { status = "as-is" }

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"