[package]
name = "cdumay_error"
version = "0.2.0"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
categories = ["caching", "data-structures", "encoding"]
description = "A library to serialize and deserialize error using serde"
documentation = "https://docs.rs/cdumay_error"
homepage =  "https://github.com/cdumay/rust-cdumay_error"
keywords = ["Error", "serde"]
license = "BSD-3-Clause"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/rust-cdumay_error"

[badges]
gitlab = { repository = "cdumay/rust-cdumay_error" }
travis-ci = { repository = "cdumay/rust-cdumay_error" }
maintenance = { status = "as-is" }

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"