[package]
name = "cdumay_error"
version = "0.3.1"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
categories = ["caching", "data-structures", "encoding"]
description = "A library to serialize and deserialize error using serde"
documentation = "https://docs.rs/cdumay_error"
edition = "2021"
homepage = "https://github.com/cdumay/rust-cdumay_error"
keywords = ["Error", "serde"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/cdumay/rust-cdumay_error"

[badges]
gitlab = { repository = "cdumay/rust-cdumay_error" }
travis-ci = { repository = "cdumay/rust-cdumay_error" }
maintenance = { status = "as-is" }

[dependencies]
cdumay_core = "0.0.1"
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.120"